5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1664_1394.log
== TEST (2019-04-16 11:05:42) 
-- CODE:
h = int(input("Quantidade de horas: "))

if(h > 20):
	p = 20*50 + (h-20)*70
	print(round(p,2)
else:
	p = h*50
	print(round(p,2))
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:01) 
-- CODE:
h = int(input("Quantidade de horas: "))

if(h > 20):
	p = 20*50 + (h-20)*70
	print(round(p,2)
else:
	p = h*50
	print(round(p,2))
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:08:02) 
-- CODE:
h = float(input("Quantidade de horas: "))

if(h > 20):
	p = (20*50 + ((h-20)*70))
	print(round(p,2)
else:
	p = h*50
	print(round(p,2))
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:08:21) 
-- CODE:
h = float(input("Quantidade de horas: "))

if(h > 20):
	p = (20*50 + ((h-20)*70))
	print(round(p,2)
else:
	p = (h*50)
	print(round(p,2))
-- EXECUTION TIME:
0.185904
-- ERROR:
  File "/home/codebench/codes/1664/1394/main.py", line 6
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:08:23) 
-- CODE:
h = float(input("Quantidade de horas: "))

if(h > 20):
	p = (20*50 + ((h-20)*70))
	print(round(p,2)
else:
	p = (h*50)
	print(round(p,2))
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:08:52) 
-- CODE:
h = float(input("Quantidade de horas: "))

	if(h > 20):
		p = (20*50 + ((h-20)*70))
		print(round(p,2)
	else:
		p = (h*50)
		print(round(p,2))
-- ERROR:
File "XXXX", line 3
    if(h > 20):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:09:12) 
-- CODE:
h = float(input("Quantidade de horas: "))

if(h > 20):
	p = (20*50 + ((h-20)*70))
	print(round(p,2)
else:
	p = (h*50)
	print(round(p,2))
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:32) 
-- CODE:
h = float(input("Quantidade de horas: "))

if(h > 20):
	p = (20*50 + ((h-20)*70))
	print(round(p,2))
else:
	p = (h*50)
	print(round(p,2))
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:11:14) 
-- CODE:
h = float(input("Quantidade de horas: "))

if(h > 20):
	p = (20*50 + ((h-20)*70))
	print(round(p,2))
else:
	p = (h*50)
	print(round(p,2))
-- EXECUTION TIME:
0.17142
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2750.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2960.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
